# kconnectors

./: .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  MODULE.bazel  README.md  maven_install.json
.github/workflows/: ci.yml  release.yml
connectors/kafka-connector-source-amq/: BUILD.bazel  README.md  version.bzl
connectors/kafka-connector-source-amq/examples/: multi-broker.yaml
connectors/kafka-connector-source-amq/src/main/java/io/github/thewillyhuman/kafka/connect/source/amq/: AckRegistry.java  AmqSourceConnector.java  AmqSourceConnectorConfig.java  AmqSourceTask.java  BrokerUrls.java  ConversionException.java  JmsClient.java  MessageRecordBuilder.java  TaskMetrics.java  TaskMetricsMBean.java  Version.java
connectors/kafka-connector-source-amq/src/test/java/io/github/thewillyhuman/kafka/connect/source/amq/: AckRegistryTest.java  AmqSourceConnectorConfigTest.java  AmqSourceConnectorTest.java  AmqSourceTaskIntegrationTest.java  BrokerUrlsTest.java  FakeBytesMessage.java  FakeMessage.java  FakeTextMessage.java  MessageRecordBuilderTest.java
connectors/kafka-connector-source-amq/src/test/resources/: simplelogger.properties
tools/ci/: affected-connectors.sh
tools/lint/: pmd-ruleset.xml  pmd.sh
